<resources>

    <string name="app_name">Seen Them Live</string>

    <!-- Common -->
    <string name="counted_item_list_index_format">%d.</string>
    <string name="counted_item_list_count_format">(%d)</string>
    <string name="song_list_index_format">%d.</string>

    <!--  Navigation  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Seen Them Live</string>
    <string name="nav_header_subtitle">By Anthony Swago</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_list">My Concerts</string>
    <string name="menu_artist">My Bands</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_friends">Friends</string>

    <!-- View Concerts Activity -->
    <string name="title_activity_view_concerts">ViewConcertsActivity</string>

    <!-- Profile Fragment -->
    <string name="profile_stats_header_text">Concert Stats</string>
    <string name="profile_concerts_count_format">Number of Concerts Attended: %d</string>
    <string name="profile_bands_count_format">Number of Bands Seen: %d</string>
    <string name="profile_venues_count_format">Number of Venues Attended: %d</string>
    <string name="profile_top_artists_label">Top Artists: (Times Seen)</string>

    <!-- Search Activity -->
    <string name="artist_label">Search by artist name</string>
    <string name="artist_hint">Artist name</string>
    <string name="venue_label">Search by concert venue</string>
    <string name="venue_hint">Venue name</string>
    <string name="state_label">State</string>
    <string name="state_empty_value">Select a state</string>
    <string name="search">Perform search</string>

    <!-- Setlist Fragment -->
    <string name="setlist_song_list_label">Setlist</string>
    <string name="setlist_encore_list_label">Encore</string>
    <string name="setlist_encore2_list_label">Encore 2:</string>
    <string name="setlist_encore3_list_label">Encore 3:</string>
    <string name="setlist_other_artists_at_show">Find Other Artists At This Show...</string>

    <!-- Artist Fragment -->
    <string name="artist_item_count_format">Times Seen: %d</string>
    <string name="artist_item_latest_date_format">Last Seen: %s</string>

    <!-- Friend Profile Activity -->
    <string name="import_button_content_description">import</string>

    <!-- Spotify -->
    <string name="spotify_shared_pref_key">Spotify</string>
    <string name="spotify_auth_redirect_uri">com.swago.seenthemlive://callback</string>

    <!-- States -->
    <string-array name="States">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

</resources>
