<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_timeline" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_map" />
    </group>

    <item android:title="Social">
        <menu>
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_friends" />
        </menu>
    </item>

</menu>
