<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/artist_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_label"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/artist_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/artist_hint"/>

        <TextView
            android:id="@+id/venue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue_label"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/venue_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/venue_hint"/>

        <TextView
            android:id="@+id/state_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_label"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/search"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>