<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setlist.SetlistFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/setlist_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingBottom="16dp">

                <CheckBox
                    android:id="@+id/save_setlist_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    style="?android:attr/starStyle"
                    android:theme="@style/checkBoxStyle"/>

                <TextView
                    android:id="@+id/setlist_detail_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/save_setlist_checkbox"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/setlist_detail_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/setlist_detail_artist"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/setlist_detail_venue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/setlist_detail_date"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

                <TextView
                    android:id="@+id/setlist_detail_tour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/setlist_detail_venue"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:id="@+id/setlist_additional_artists_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/setlist_detail_tour"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@android:drawable/ic_search_category_default"
                        app:tint="@color/colorPrimary"/>

                    <Button
                        android:id="@+id/setlist_additional_artists_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:text="@string/setlist_other_artists_at_show"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/setlist_additional_artists_layout"
                    android:layout_marginTop="8dp"
                    app:dividerThickness="1dp"
                    app:dividerColor="@color/colorAccent"
                    app:dividerInsetEnd="28dp"
                    app:dividerInsetStart="28dp" />

            </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/setlist_name_layout">

                    <TextView
                        android:id="@+id/setlist_label_setlist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/setlist_song_list_label"
                        android:textSize="18sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/song_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/setlist_label_encore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/setlist_encore_list_label"
                        android:textSize="18sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/encore_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/setlist_label_encore2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/setlist_encore2_list_label"
                        android:textSize="18sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/encore2_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/setlist_label_encore3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/setlist_encore3_list_label"
                        android:textSize="18sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/encore3_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:padding="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminate="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>